--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+@import url(fontawesome-all.min.css);
+@import 'https://fonts.google.com/specimen/Montserrat?query=montserrat';
+
+
 html, body {
   background-color: darkslategray;
   margin: 0;
