--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,7 @@ html, body {
   margin: 0;
   overflow-x: hidden;
   scroll-behavior: smooth;
-  font-family: "Montserrat", Montserrat, monospace;
+  font-family: "Montserrat", monospace;
 }
 
 .scroll-container {
@@ -45,7 +45,7 @@ html, body {
     text-align: center;
     padding-top: 30px;
     text-decoration: none;
-    font-family: "Montserrat", Montserrat, monospace;
+    font-family: "Montserrat", monospace;
     font-size: 17px;
     font-weight: 1400;
   }
@@ -70,7 +70,7 @@ html, body {
     align-items: center;
     color: white;
     font-size: 7vw;
-    font-family: "Montserrat Alternates", Montserrat, monospace;
+    font-family: "Montserrat", monospace;
     font-weight: lighter;
     z-index: 1000;
   }
@@ -81,7 +81,7 @@ html, body {
     justify-content:center;
     color: white;
     font-size: 16vw;
-    font-family: "Montserrat", Montserrat, monospace;
+    font-family: "Montserrat", monospace;
     font-weight: bold;
     letter-spacing: -2vw;
     z-index: 1000;
@@ -91,7 +91,7 @@ html, body {
     display: flex;
     justify-content:center;
     color: white;
-    font-family: "Montserrat", Montserrat, monospace;
+    font-family: "Montserrat", monospace;
   }
 
   .container-img {
@@ -257,7 +257,7 @@ html, body {
 .social-media a {
   color: rgb(230, 230, 230);
   text-decoration: none;
-  font-family: "Montserrat", Montserrat, monospace;
+  font-family: "Montserrat", monospace;
 }
 .social-media a:hover {
   color: white;
